<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE configuration>
<!-- 
 Copyright (c) 2014 Tomàs Ortega
 
 Licensed under the GPL License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
 
       http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
 
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="1"
    tools:ignore="Overdraw" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/editText1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/a"
                android:inputType="numberDecimal" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editText4"
                
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:ems="10"
                android:hint="@string/_"
                android:inputType="numberDecimal" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/editText2"
                android:ems="10"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:hint="@string/b"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/editText5"
                
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/_b"
                android:inputType="numberDecimal" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/editText3"
                android:ems="10"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/c"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/editText6"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/_c"
                android:inputType="numberDecimal" />

        </TableRow>

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/_"
            android:scaleType="centerInside"
            android:src="@drawable/secondselector" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector"
            android:text="@string/buidar_tot" />

    </TableLayout>